--- a/main.ipynb
+++ b/main.ipynb
@@ -206,7 +206,17 @@
    "id": "13b522d0",
    "metadata": {},
    "source": [
-    "Looking at the plots it seems like it is best to used the standardized one, as the left plot shows that there are huge difference in scaling, where some values are in the thousands, and others are barely over zero. Using the standradized one means the scales are more comparable and therefore not having some values dominate the models"
+    "Looking at the plots it seems like it is best to used the standardized one, as the left plot shows that there are huge difference in scaling, where some values are in the thousands, and others are barely over zero. Using the standradized one means the scales are more comparable and therefore not having some values dominate the models. And the esthetics of the right boxplot looks right to use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2494b8c5",
+   "metadata": {},
+   "source": [
+    "### 1.3 - Comment on importance of three way split with respect to hyperparameter search and robustness of any learned model.\n",
+    "The three way split is important in regards to hyperparameters as we dont use the test set to cheat the hyperparameters to fit the test set.\n",
+    "For robustness its good because it keeps the test set seperate from the hyperparameter search, and thus we don't risk to fit the hyperparameters to the test data, but rather use the test data to see how the hyperparameters works on new data."
    ]
   }
  ],
