--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "05385368",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,10 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -20,7 +23,7 @@
    "id": "502a2150",
    "metadata": {},
    "source": [
-    "## Exercise 1"
+    "## Exercise 1 - Data Preparation"
    ]
   },
   {
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "99116973",
    "metadata": {},
    "outputs": [
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "7c617ee2",
    "metadata": {},
    "outputs": [
@@ -173,18 +176,18 @@
     }
    ],
    "source": [
-    "# 2) Velg kun features (dropp target/id)\n",
+    "# Drop id and diagnosis to get features, these are not numerical\n",
     "X = df.drop(columns=[\"id\", \"diagnosis\"], errors=\"ignore\")\n",
     "\n",
-    "# 3) Standardiser\n",
+    "# Standardize features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = pd.DataFrame(scaler.fit_transform(X), columns=X.columns, index=X.index)\n",
     "\n",
-    "# 4) Beskriv statistikk før og etter\n",
+    "# Describe statistics before and after\n",
     "print(\"No Standardization\\n\", X.describe().T[['mean','std']])\n",
     "print(\"\\nStandardization:\\n\", X_scaled.describe().T[['mean','std']])\n",
     "\n",
-    "# 5) Plot boxplots for alle features\n",
+    "# Plot boxplots for all features\n",
     "plt.figure(figsize=(14,6))\n",
     "\n",
     "plt.subplot(1,2,1)\n",
@@ -217,6 +220,122 @@
     "### 1.3 - Comment on importance of three way split with respect to hyperparameter search and robustness of any learned model.\n",
     "The three way split is important in regards to hyperparameters as we dont use the test set to cheat the hyperparameters to fit the test set.\n",
     "For robustness its good because it keeps the test set seperate from the hyperparameter search, and thus we don't risk to fit the hyperparameters to the test data, but rather use the test data to see how the hyperparameters works on new data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9ce0e83",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 - Decision Trees\n",
+    "### Splits\n",
+    "### DO NOT TOUCH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e011703c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (341, 30)\n",
+      "Validation: (114, 30)\n",
+      "Test: (114, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Features and target\n",
+    "X = df.drop(columns=[\"id\", \"diagnosis\"], errors=\"ignore\")\n",
+    "y = df[\"diagnosis\"].map({\"M\": 1, \"B\": 0})\n",
+    "\n",
+    "# Split into 60% train, 20% val, 20% test\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y, test_size=0.4, stratify=y, random_state=42\n",
+    ")\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_temp, y_temp, test_size=0.5, stratify=y_temp, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(\"Train:\", X_train.shape)\n",
+    "print(\"Validation:\", X_val.shape)\n",
+    "print(\"Test:\", X_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f8216bf",
+   "metadata": {},
+   "source": [
+    "### 2.1 - Train a Decision Tree classifier using default parameters. Evaluate it on validation sets from original splits (report accuracy mean and std)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "698dade9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Accuracy mean: 0.9238704177323104\n",
+      "Cross Validation Accuracy std:  0.040627367474774134\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Only training set\n",
+    "# Modell with default parameters\n",
+    "clf = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "# 5-fold cross-validation on training set\n",
+    "cv_scores = cross_val_score(clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
+    "\n",
+    "print(\"Cross Validation Accuracy mean:\", np.mean(cv_scores))\n",
+    "print(\"Cross Validation Accuracy std: \", np.std(cv_scores))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "79f6c973",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.9385964912280702\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validation set\n",
+    "clf.fit(X_train, y_train)\n",
+    "val_score = clf.score(X_val, y_val)\n",
+    "print(\"Validation Accuracy:\", val_score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e485647f",
+   "metadata": {},
+   "source": [
+    "Validation set better accuracy than cross validation mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beaad98f",
+   "metadata": {},
+   "source": [
+    "### 2.2 - From the trained model, comment on feature importance values and identify the top 3 features from your model."
    ]
   }
  ],
