--- a/main.ipynb
+++ b/main.ipynb
@@ -337,6 +337,67 @@
    "source": [
     "### 2.2 - From the trained model, comment on feature importance values and identify the top 3 features from your model."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "132c1b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature importances:\n",
+      " perimeter_worst            0.704881\n",
+      "concave points_worst       0.136016\n",
+      "texture_worst              0.038957\n",
+      "smoothness_worst           0.032706\n",
+      "fractal_dimension_se       0.028150\n",
+      "area_se                    0.019922\n",
+      "symmetry_mean              0.010456\n",
+      "radius_mean                0.009410\n",
+      "radius_worst               0.009410\n",
+      "area_worst                 0.008365\n",
+      "smoothness_se              0.001726\n",
+      "area_mean                  0.000000\n",
+      "perimeter_mean             0.000000\n",
+      "texture_mean               0.000000\n",
+      "perimeter_se               0.000000\n",
+      "texture_se                 0.000000\n",
+      "radius_se                  0.000000\n",
+      "fractal_dimension_mean     0.000000\n",
+      "concavity_mean             0.000000\n",
+      "concave points_mean        0.000000\n",
+      "smoothness_mean            0.000000\n",
+      "compactness_mean           0.000000\n",
+      "symmetry_se                0.000000\n",
+      "compactness_se             0.000000\n",
+      "concavity_se               0.000000\n",
+      "concave points_se          0.000000\n",
+      "compactness_worst          0.000000\n",
+      "concavity_worst            0.000000\n",
+      "symmetry_worst             0.000000\n",
+      "fractal_dimension_worst    0.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get important features from the trained model, all features, and sorting them by importance\n",
+    "importances = clf.feature_importances_\n",
+    "feature_names = X.columns\n",
+    "feature_importances = pd.Series(importances, index=feature_names).sort_values(ascending=False)\n",
+    "print(\"Feature importances:\\n\", feature_importances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05168772",
+   "metadata": {},
+   "source": [
+    "The model places high importance perimieter_worst, a little important on concave points_worst. It also places absolutely no importance at all on about 20 features. To me, this feels a little weird but perimeter_worst might just be a good classifier between malicious and benign. It might also be a case of overfitting when it relies that mch on one value."
+   ]
   }
  ],
  "metadata": {
