--- a/main.ipynb
+++ b/main.ipynb
@@ -398,6 +398,54 @@
    "source": [
     "The model places high importance perimieter_worst, a little important on concave points_worst. It also places absolutely no importance at all on about 20 features. To me, this feels a little weird but perimeter_worst might just be a good classifier between malicious and benign. It might also be a case of overfitting when it relies that mch on one value."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5ca8bc",
+   "metadata": {},
+   "source": [
+    "### 2.3 - Vary the max depth parameter (e.g., depth 2-10). Use validation accuracy (mean ± std from cross-validation on the training set) to choose the best depth. Provide performance for each chosen depth (at-least 5 to be reported) and discuss the aspects of overfitting vs. underfitting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "99c2b8a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Depth: 2, CV Accuracy mean: 0.9298, std: 0.0309\n",
+      "Max Depth: 3, CV Accuracy mean: 0.9355, std: 0.0236\n",
+      "Max Depth: 4, CV Accuracy mean: 0.9326, std: 0.0343\n",
+      "Max Depth: 5, CV Accuracy mean: 0.9298, std: 0.0309\n",
+      "Max Depth: 6, CV Accuracy mean: 0.9298, std: 0.0395\n",
+      "Max Depth: 7, CV Accuracy mean: 0.9239, std: 0.0280\n",
+      "Max Depth: 8, CV Accuracy mean: 0.9239, std: 0.0406\n",
+      "Max Depth: 9, CV Accuracy mean: 0.9239, std: 0.0406\n",
+      "Max Depth: 10, CV Accuracy mean: 0.9239, std: 0.0406\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Varying max depth from 2 to 10 \n",
+    "depths = range(2, 11)  # prøv max_depth 2–10\n",
+    "\n",
+    "for d in depths:\n",
+    "    clf = DecisionTreeClassifier(max_depth=d, random_state=42)\n",
+    "    cv_scores = cross_val_score(clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
+    "    print(f\"Max Depth: {d}, CV Accuracy mean: {np.mean(cv_scores):.4f}, std: {np.std(cv_scores):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e8752c1",
+   "metadata": {},
+   "source": [
+    "The accuracy is about the same, allthough Depth=3 does have the highest mean aswell as the lowest std. The variance does increase whilst mean starts to decrease from max depth 6 and onwards, except for std on 7, this might be a sign of overfitting. The accuracy and std is worse on max depth 2 than 3, this could be some underfitting. The first CV training was also worse than depth 2"
+   ]
   }
  ],
  "metadata": {
