--- a/main.ipynb
+++ b/main.ipynb
@@ -446,6 +446,28 @@
    "source": [
     "The accuracy is about the same, allthough Depth=3 does have the highest mean aswell as the lowest std. The variance does increase whilst mean starts to decrease from max depth 6 and onwards, except for std on 7, this might be a sign of overfitting. The accuracy and std is worse on max depth 2 than 3, this could be some underfitting. The first CV training was also worse than depth 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "34242543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy with max depth 3: 0.9385964912280702\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max depth 3 on validation set\n",
+    "clf = DecisionTreeClassifier(max_depth=3, random_state=42)\n",
+    "clf.fit(X_train, y_train)\n",
+    "val_score = clf.score(X_val, y_val)\n",
+    "print(\"Validation Accuracy with max depth 3:\", val_score)"
+   ]
   }
  ],
  "metadata": {
