--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "05385368",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "99116973",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7c617ee2",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e011703c",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "698dade9",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "79f6c973",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "132c1b6f",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "99c2b8a9",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
    ],
    "source": [
     "# Varying max depth from 2 to 10 \n",
-    "depths = range(2, 11)  # prøv max_depth 2–10\n",
+    "depths = range(2, 11)\n",
     "\n",
     "for d in depths:\n",
     "    clf = DecisionTreeClassifier(max_depth=d, random_state=42)\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "34242543",
    "metadata": {},
    "outputs": [
@@ -468,6 +468,30 @@
     "val_score = clf.score(X_val, y_val)\n",
     "print(\"Validation Accuracy with max depth 3:\", val_score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55963c1f",
+   "metadata": {},
+   "source": [
+    "Max depth 3 does get higher accuraccy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72af90cc",
+   "metadata": {},
+   "source": [
+    "### 2.4 - Repeat previous exercise with different min samples leaf values. Which setting generalizes best according to the validation set?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b4cfb9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
