--- a/main.ipynb
+++ b/main.ipynb
@@ -228,8 +228,16 @@
    "metadata": {},
    "source": [
     "## Exercise 2 - Decision Trees\n",
-    "### Splits\n",
-    "### DO NOT TOUCH"
+    "### Splits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d58399",
+   "metadata": {},
+   "source": [
+    "### DO NOT TOUCH\n",
+    "(After closer reconsideration, it turn out the random state makes sure the splits are the same, this was made to make sure it was the same, woops. Keeping this now so i dont have to split anymore i guess.)"
    ]
   },
   {
@@ -409,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "99c2b8a9",
    "metadata": {},
    "outputs": [
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "34242543",
    "metadata": {},
    "outputs": [
@@ -487,11 +495,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "1b4cfb9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation Accuracy mean with min_samples_leaf   1: 0.92387 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    1: 0.04063 std\n",
+      "Validation Accuracy with min_samples_leaf              1: 0.9386 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   2: 0.93261 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    2: 0.03151 std\n",
+      "Validation Accuracy with min_samples_leaf              2: 0.9386 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   3: 0.93261 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    3: 0.02709 std\n",
+      "Validation Accuracy with min_samples_leaf              3: 0.92105 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   4: 0.92664 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    4: 0.02471 std\n",
+      "Validation Accuracy with min_samples_leaf              4: 0.92105 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   5: 0.92084 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    5: 0.02381 std\n",
+      "Validation Accuracy with min_samples_leaf              5: 0.91228 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   6: 0.91799 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    6: 0.02989 std\n",
+      "Validation Accuracy with min_samples_leaf              6: 0.91228 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   7: 0.91211 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    7: 0.02755 std\n",
+      "Validation Accuracy with min_samples_leaf              7: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   8: 0.92093 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    8: 0.02514 std\n",
+      "Validation Accuracy with min_samples_leaf              8: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   9: 0.92387 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    9: 0.02953 std\n",
+      "Validation Accuracy with min_samples_leaf              9: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   10: 0.92387 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    10: 0.02953 std\n",
+      "Validation Accuracy with min_samples_leaf              10: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   11: 0.92387 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    11: 0.02803 std\n",
+      "Validation Accuracy with min_samples_leaf              11: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   12: 0.92093 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    12: 0.02986 std\n",
+      "Validation Accuracy with min_samples_leaf              12: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   13: 0.91211 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    13: 0.02421 std\n",
+      "Validation Accuracy with min_samples_leaf              13: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   14: 0.90921 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    14: 0.02797 std\n",
+      "Validation Accuracy with min_samples_leaf              14: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   15: 0.90627 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    15: 0.02831 std\n",
+      "Validation Accuracy with min_samples_leaf              15: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   16: 0.90332 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    16: 0.02835 std\n",
+      "Validation Accuracy with min_samples_leaf              16: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   17: 0.90332 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    17: 0.02835 std\n",
+      "Validation Accuracy with min_samples_leaf              17: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   18: 0.89744 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    18: 0.03188 std\n",
+      "Validation Accuracy with min_samples_leaf              18: 0.92982 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   19: 0.89744 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    19: 0.03188 std\n",
+      "Validation Accuracy with min_samples_leaf              19: 0.9386 val\n",
+      "\n",
+      "Cross Validation Accuracy mean with min_samples_leaf   20: 0.89744 mean\n",
+      "Cross Validation Accuracy std with min_samples_leaf    20: 0.03188 std\n",
+      "Validation Accuracy with min_samples_leaf              20: 0.9386 val\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For loops for min_samples_leaf from 1 to 20, both mean, std, and validation accuracy, 5 decimal places\n",
+    "leaf_sizes = range(1, 21)\n",
+    "for leaf_size in leaf_sizes:\n",
+    "    clf = DecisionTreeClassifier(min_samples_leaf=leaf_size, random_state=42)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    cv_scores = cross_val_score(clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
+    "    print(f\"Cross Validation Accuracy mean with min_samples_leaf   {leaf_size}:\", np.round(np.mean(cv_scores), 5), \"mean\")\n",
+    "    print(f\"Cross Validation Accuracy std with min_samples_leaf    {leaf_size}:\", np.round(np.std(cv_scores), 5), \"std\")\n",
+    "    val_score = clf.score(X_val, y_val)\n",
+    "    print(f\"Validation Accuracy with min_samples_leaf              {leaf_size}:\", np.round(val_score, 5), \"val\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7fb1ad",
+   "metadata": {},
+   "source": [
+    "For min_samples_leaf 1, 2, 19, 20 gave the same accuracy. Low number of leaf samples might have high variance and therefore overfit, whilst the the (longer,deeper?) tree might have to high bias and underfit. Also interesting is the mean from the training splits keep getting worse the more min samples gets added."
+   ]
   }
  ],
  "metadata": {
