--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "05385368",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,9 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
@@ -605,6 +607,44 @@
    "metadata": {},
    "source": [
     "For min_samples_leaf 1, 2, 19, 20 gave the same accuracy. Low number of leaf samples might have high variance and therefore overfit, whilst the the (longer,deeper?) tree might have to high bias and underfit. Also interesting is the mean from the training splits keep getting worse the more min samples gets added."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67a2aefe",
+   "metadata": {},
+   "source": [
+    "## Exercise 3: Support Vector MAchines (SVM)\n",
+    "\n",
+    "### 3.1 - Train a linear SVM (kernel=\"linear\") and evaluate on validation sets (use the original 5 splits that was created in previous exercise). Report accuracy mean, std and plot the ROC for each split."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "206a1b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Cross Validation Accuracy mean: 0.96773 mean\n",
+      "SVM Cross Validation Accuracy std: 0.01952 std\n",
+      "SVM Validation Accuracy: 0.95614\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trains a linear SVM (kernel=\"linear\") and evaluate on validation sets (use the original 5 splits that was created in previous exercise). Report accuracy mean, std and plot the ROC for each split.\n",
+    "svm_clf = make_pipeline(StandardScaler(), LinearSVC(random_state=42, C=1))\n",
+    "cv_scores = cross_val_score(svm_clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
+    "svm_clf.fit(X_train, y_train)\n",
+    "# Validation set\n",
+    "val_score = svm_clf.score(X_val, y_val)\n",
+    "print(\"SVM Cross Validation Accuracy mean:\", np.round(np.mean(cv_scores), 5), \"mean\")\n",
+    "print(\"SVM Cross Validation Accuracy std:\", np.round(np.std(cv_scores), 5), \"std\")\n",
+    "print(\"SVM Validation Accuracy:\", np.round(val_score, 5))"
    ]
   }
  ],
