--- a/main.ipynb
+++ b/main.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b61c258f",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,9 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('ROC Curve for RBF SVM Classifier')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Pointy curves cause few data??"
    ]
   },
   {
