--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "id": "05385368",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "id": "99116973",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "id": "7c617ee2",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "e011703c",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "698dade9",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "79f6c973",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "132c1b6f",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "99c2b8a9",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "34242543",
    "metadata": {},
    "outputs": [
@@ -476,8 +476,12 @@
     "# Max depth 3 on validation set\n",
     "clf = DecisionTreeClassifier(max_depth=3, random_state=42)\n",
     "clf.fit(X_train, y_train)\n",
-    "val_score = clf.score(X_val, y_val)\n",
-    "print(\"Validation Accuracy with max depth 3:\", val_score)"
+    "val_score_dt = clf.score(X_val, y_val)\n",
+    "print(\"Validation Accuracy with max depth 3:\", val_score_dt)\n",
+    "\n",
+    "\n",
+    "dt_model = clf\n",
+    "dt_val_acc = val_score_dt\n"
    ]
   },
   {
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "1b4cfb9d",
    "metadata": {},
    "outputs": [
@@ -599,7 +603,7 @@
     "    print(f\"Cross Validation Accuracy mean with min_samples_leaf   {leaf_size}:\", np.round(np.mean(cv_scores), 5), \"mean\")\n",
     "    print(f\"Cross Validation Accuracy std with min_samples_leaf    {leaf_size}:\", np.round(np.std(cv_scores), 5), \"std\")\n",
     "    val_score = clf.score(X_val, y_val)\n",
-    "    print(f\"Validation Accuracy with min_samples_leaf              {leaf_size}:\", np.round(val_score, 5), \"val\\n\")"
+    "    print(f\"Validation Accuracy with min_samples_leaf              {leaf_size}:\", np.round(val_score, 5), \"val\\n\")\n"
    ]
   },
   {
@@ -607,7 +611,11 @@
    "id": "ca7fb1ad",
    "metadata": {},
    "source": [
-    "For min_samples_leaf 1, 2, 19, 20 gave the same accuracy. Low number of leaf samples might have high variance and therefore overfit, whilst the the (longer,deeper?) tree might have to high bias and underfit. Also interesting is the mean from the training splits keep getting worse the more min samples gets added."
+    "For min_samples_leaf 1, 2, 19, 20 gave the same accuracy on the validation set. Low number of leaf samples might have high variance and therefore overfit, whilst the the (longer,deeper?) tree might have to high bias and underfit. Also interesting is the mean from the training splits keep getting worse the more min samples gets added.\n",
+    "\n",
+    "These min samples gives the same result as the best max depth setting.\n",
+    "\n",
+    "As a summary, decision tree gives the same validation accuracy regardless of settings, be it max depth or min sample leaves or default settings."
    ]
   },
   {
@@ -622,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "206a1b25",
    "metadata": {},
    "outputs": [
@@ -654,13 +662,13 @@
    ],
    "source": [
     "# Trains a linear SVM (kernel=\"linear\") and evaluate on validation sets (use the original 5 splits that was created in previous exercise). Report accuracy mean, std and plot the ROC for each split.\n",
-    "svm_clf = make_pipeline(StandardScaler(), SVC(kernel=\"linear\", random_state=42, C=1, probability=True))\n",
-    "cv_scores = cross_val_score(svm_clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
+    "svm_clf = make_pipeline(StandardScaler(), SVC(kernel=\"linear\", random_state=42, probability=True))\n",
+    "cv_scores_svm_linear = cross_val_score(svm_clf, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
     "\n",
     "\n",
     "\n",
-    "print(\"SVM Cross Validation Accuracy mean:\", np.round(np.mean(cv_scores), 5), \"mean\")\n",
-    "print(\"SVM Cross Validation Accuracy std:\", np.round(np.std(cv_scores), 5), \"std\")\n",
+    "print(\"SVM Cross Validation Accuracy mean:\", np.round(np.mean(cv_scores_svm_linear), 5), \"mean\")\n",
+    "print(\"SVM Cross Validation Accuracy std:\", np.round(np.std(cv_scores_svm_linear), 5), \"std\")\n",
     "\n",
     "\n",
     "skf = StratifiedKFold(n_splits=5, shuffle=False)\n",
@@ -681,8 +689,10 @@
     "plt.show()\n",
     "\n",
     "svm_clf.fit(X_train, y_train)\n",
-    "val_score = svm_clf.score(X_val, y_val)\n",
-    "print(\"SVM kernel=linear Validation Accuracy:\", np.round(val_score, 5), \"val\")"
+    "val_score_svm_linear = svm_clf.score(X_val, y_val)\n",
+    "print(\"SVM kernel=linear Validation Accuracy:\", np.round(val_score_svm_linear, 5), \"val\")\n",
+    "\n",
+    "# Best results for linear is this one, so values saved for comparison"
    ]
   },
   {
@@ -705,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "b61c258f",
    "metadata": {},
    "outputs": [
@@ -774,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "cdce889c",
    "metadata": {},
    "outputs": [
@@ -857,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "id": "140106e1",
    "metadata": {},
    "outputs": [
@@ -923,6 +933,37 @@
     "\n",
     "### 4.1 - Compare Decision Tree and SVM results from the training set (cross-validation mean ± std) and validation set. Plot the performance comparison plots (e.g., scatter plots, ROC curves). Which model generalizes better?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "48b6d06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9649122807017544"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cv_scores_svm_linear)\n",
+    "np.std(cv_scores_svm_linear)\n",
+    "val_score_svm_linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5391059b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
