--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "05385368",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.metrics import accuracy_score, roc_curve, auc"
+    "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
+    "from sklearn.metrics import fbeta_score"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "99116973",
    "metadata": {},
    "outputs": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "7c617ee2",
    "metadata": {},
    "outputs": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "e011703c",
    "metadata": {},
    "outputs": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "698dade9",
    "metadata": {},
    "outputs": [
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "79f6c973",
    "metadata": {},
    "outputs": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "132c1b6f",
    "metadata": {},
    "outputs": [
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "99c2b8a9",
    "metadata": {},
    "outputs": [
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "34242543",
    "metadata": {},
    "outputs": [
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "1b4cfb9d",
    "metadata": {},
    "outputs": [
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "206a1b25",
    "metadata": {},
    "outputs": [
@@ -718,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "b61c258f",
    "metadata": {},
    "outputs": [
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "cdce889c",
    "metadata": {},
    "outputs": [
@@ -891,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "140106e1",
    "metadata": {},
    "outputs": [
@@ -960,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "48b6d06f",
    "metadata": {},
    "outputs": [
@@ -970,7 +971,7 @@
        "{'C': 5, 'val_acc': 0.9736842105263158}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "5391059b",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "e4ac03ac",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1060,7 @@
     "    plt.text(row[\"CV Mean\"]+0.001, row[\"Validation Accuracy\"]+0.001, \n",
     "             row[\"Model\"], fontsize=10)\n",
     "\n",
-    "# Referanselinje (perfekt generalisering)\n",
+    "# Perfect generalization line\n",
     "plt.plot([0.9, 1.0], [0.9, 1.0], 'k--', lw=1)\n",
     "plt.xlabel(\"Training (CV mean accuracy)\")\n",
     "plt.ylabel(\"Validation accuracy\")\n",
@@ -1075,6 +1076,55 @@
    "source": [
     "The decision tree has a bit lower accuracy for both validation and training than the SVM variants. The decision tree also has higher variance and these characteristics tell me that the decision tree is worse for this task than the SVM variants.\n",
     "To my understanding the SVM RBF variant has a slight tendency to overfits as the point is above the diagoanl. The SVM linear variant is bang on the line but the validation accuracy is a bit lower. Both their variance is about the same. Even though the RBF kernel is not directly on the diagonal, it is close enough to say it is robust enough and generalizes best because of the increased accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bdf171e",
+   "metadata": {},
+   "source": [
+    "### 4.2 - Discuss the trade-off between usability and accuracy for this dataset. Which model would you recommend for a medical decision-support system, and why? (Hint - Make use of Fβ score analysis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "02a0164f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree   | F1 = 0.9176 | F2 = 0.9112\n",
+      "SVM (Linear)    | F1 = 0.9512 | F2 = 0.9242\n",
+      "SVM (RBF)       | F1 = 0.9250 | F2 = 0.8852\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predictions for each model\n",
+    "y_pred_dt   = clf.predict(X_val)                # Decision Tree\n",
+    "y_pred_svm  = svm_clf.predict(X_val)            # Linear SVM\n",
+    "y_pred_rbf  = svm_rbf_clf.predict(X_val)        # RBF SVM\n",
+    "\n",
+    "# F1 (β=1) and F2 (β=2) scores\n",
+    "for name, y_pred in [\n",
+    "    (\"Decision Tree\", y_pred_dt),\n",
+    "    (\"SVM (Linear)\", y_pred_svm),\n",
+    "    (\"SVM (RBF)\", y_pred_rbf)\n",
+    "]:\n",
+    "    f1 = fbeta_score(y_val, y_pred, beta=1)\n",
+    "    f2 = fbeta_score(y_val, y_pred, beta=2)\n",
+    "    print(f\"{name:15s} | F1 = {f1:.4f} | F2 = {f2:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49bbecc8",
+   "metadata": {},
+   "source": [
+    "Considering this data is from detecting breast cancer, accuracy is very important so we can get all cases and also not misclassify. F1 shows how balanced the model is, between precision and recall. F2 emphazises recall more, meaning its better at picking up false negative, i.e diagnosing someone with cancer as not having it, which is very dangerous. Since the linear scores better for both metric, this seems like the obvious choice."
    ]
   }
  ],
