--- a/main.ipynb
+++ b/main.ipynb
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "02a0164f",
    "metadata": {},
    "outputs": [
@@ -1096,9 +1096,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree   | F1 = 0.9176 | F2 = 0.9112\n",
-      "SVM (Linear)    | F1 = 0.9512 | F2 = 0.9242\n",
-      "SVM (RBF)       | F1 = 0.9250 | F2 = 0.8852\n"
+      "Decision Tree   | F0.5 = 0.9242 | F1 = 0.9176 | F2 = 0.9112 | F3 = 0.9091\n",
+      "SVM (Linear)    | F0.5 = 0.9799 | F1 = 0.9512 | F2 = 0.9242 | F3 = 0.9155\n",
+      "SVM (RBF)       | F0.5 = 0.9686 | F1 = 0.9250 | F2 = 0.8852 | F3 = 0.8726\n"
      ]
     }
    ],
@@ -1108,15 +1108,17 @@
     "y_pred_svm  = svm_clf.predict(X_val)            # Linear SVM\n",
     "y_pred_rbf  = svm_rbf_clf.predict(X_val)        # RBF SVM\n",
     "\n",
-    "# F1 (β=1) and F2 (β=2) scores\n",
+    "# F0.5 (β=0.5), F1 (β=1) and F2 (β=2) scores\n",
     "for name, y_pred in [\n",
     "    (\"Decision Tree\", y_pred_dt),\n",
     "    (\"SVM (Linear)\", y_pred_svm),\n",
     "    (\"SVM (RBF)\", y_pred_rbf)\n",
     "]:\n",
+    "    f0_5 = fbeta_score(y_val, y_pred, beta=0.5)\n",
     "    f1 = fbeta_score(y_val, y_pred, beta=1)\n",
     "    f2 = fbeta_score(y_val, y_pred, beta=2)\n",
-    "    print(f\"{name:15s} | F1 = {f1:.4f} | F2 = {f2:.4f}\")\n"
+    "    f3 = fbeta_score(y_val, y_pred, beta=3)\n",
+    "    print(f\"{name:15s} | F0.5 = {f0_5:.4f} | F1 = {f1:.4f} | F2 = {f2:.4f} | F3 = {f3:.4f}\")\n"
    ]
   },
   {
@@ -1125,6 +1127,142 @@
    "metadata": {},
    "source": [
     "Considering this data is from detecting breast cancer, accuracy is very important so we can get all cases and also not misclassify. F1 shows how balanced the model is, between precision and recall. F2 emphazises recall more, meaning its better at picking up false negative, i.e diagnosing someone with cancer as not having it, which is very dangerous. Since the linear scores better for both metric, this seems like the obvious choice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f346f9e9",
+   "metadata": {},
+   "source": [
+    "### 4.3 - Use GridSearchCV with the training set to tune hyperparameters for both Decision Trees and SVMs. Confirm your final choice with the validation set. Summarize the best settings and provide relevant performance plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27caf07f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Decision Tree ===\n",
+      "Best params: {'criterion': 'gini', 'max_depth': 3, 'min_samples_leaf': 1, 'min_samples_split': 10}\n",
+      "CV accuracy (mean ± std): 0.9385 ± 0.0213\n",
+      "Validation accuracy:       0.9386\n",
+      "\n",
+      "=== SVM (Linear) ===\n",
+      "Best params: {'svc__C': 1}\n",
+      "CV accuracy (mean ± std): 0.9648 ± 0.0149\n",
+      "Validation accuracy:       0.9649\n",
+      "\n",
+      "=== SVM (RBF) ===\n",
+      "Best params: {'svc__C': 10, 'svc__gamma': 0.003}\n",
+      "CV accuracy (mean ± std): 0.9736 ± 0.0058\n",
+      "Validation accuracy:       0.9561\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "cv5 = StratifiedKFold(n_splits=5, shuffle=False)\n",
+    "\n",
+    "# =======================\n",
+    "# 1) Decision Tree (DT)\n",
+    "# =======================\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "dt_grid = {\n",
+    "    \"max_depth\": [None, 2, 3, 4, 5, 6, 8, 10],\n",
+    "    \"min_samples_leaf\": [1, 2, 5, 10, 20],\n",
+    "    \"min_samples_split\": [2, 5, 10, 20],\n",
+    "    \"criterion\": [\"gini\", \"entropy\"]\n",
+    "}\n",
+    "\n",
+    "dt_gs = GridSearchCV(\n",
+    "    estimator=dt,\n",
+    "    param_grid=dt_grid,\n",
+    "    scoring=\"accuracy\",\n",
+    "    cv=cv5,\n",
+    "    n_jobs=-1,\n",
+    "    refit=True,\n",
+    ")\n",
+    "dt_gs.fit(X_train, y_train)\n",
+    "\n",
+    "dt_cv_mean = dt_gs.best_score_\n",
+    "dt_cv_std  = dt_gs.cv_results_[\"std_test_score\"][dt_gs.best_index_]\n",
+    "dt_val_acc = accuracy_score(y_val, dt_gs.predict(X_val))\n",
+    "\n",
+    "print(\"\\n=== Decision Tree ===\")\n",
+    "print(\"Best params:\", dt_gs.best_params_)\n",
+    "print(f\"CV accuracy (mean ± std): {dt_cv_mean:.4f} ± {dt_cv_std:.4f}\")\n",
+    "print(f\"Validation accuracy:       {dt_val_acc:.4f}\")\n",
+    "\n",
+    "# =======================\n",
+    "# 2) Linear SVM\n",
+    "# =======================\n",
+    "svm_lin = make_pipeline(StandardScaler(), SVC(kernel=\"linear\", probability=True, random_state=42))\n",
+    "# step names are auto: 'standardscaler' and 'svc'\n",
+    "svm_lin_grid = {\n",
+    "    \"svc__C\": [0.01, 0.1, 1, 10, 100]\n",
+    "}\n",
+    "\n",
+    "svm_lin_gs = GridSearchCV(\n",
+    "    estimator=svm_lin,\n",
+    "    param_grid=svm_lin_grid,\n",
+    "    scoring=\"accuracy\",\n",
+    "    cv=cv5,\n",
+    "    n_jobs=-1,\n",
+    "    refit=True,\n",
+    ")\n",
+    "svm_lin_gs.fit(X_train, y_train)\n",
+    "\n",
+    "lin_cv_mean = svm_lin_gs.best_score_\n",
+    "lin_cv_std  = svm_lin_gs.cv_results_[\"std_test_score\"][svm_lin_gs.best_index_]\n",
+    "lin_val_acc = accuracy_score(y_val, svm_lin_gs.predict(X_val))\n",
+    "\n",
+    "print(\"\\n=== SVM (Linear) ===\")\n",
+    "print(\"Best params:\", svm_lin_gs.best_params_)\n",
+    "print(f\"CV accuracy (mean ± std): {lin_cv_mean:.4f} ± {lin_cv_std:.4f}\")\n",
+    "print(f\"Validation accuracy:       {lin_val_acc:.4f}\")\n",
+    "\n",
+    "# =======================\n",
+    "# 3) RBF SVM\n",
+    "# =======================\n",
+    "svm_rbf = make_pipeline(StandardScaler(), SVC(kernel=\"rbf\", probability=True, random_state=42))\n",
+    "svm_rbf_grid = {\n",
+    "    \"svc__C\":     [0.01, 0.1, 1, 10, 100],\n",
+    "    \"svc__gamma\": [\"scale\", 0.001, 0.003, 0.01, 0.03, 0.1, 0.3, 1]\n",
+    "}\n",
+    "\n",
+    "svm_rbf_gs = GridSearchCV(\n",
+    "    estimator=svm_rbf,\n",
+    "    param_grid=svm_rbf_grid,\n",
+    "    scoring=\"accuracy\",\n",
+    "    cv=cv5,\n",
+    "    n_jobs=-1,\n",
+    "    refit=True,\n",
+    ")\n",
+    "svm_rbf_gs.fit(X_train, y_train)\n",
+    "\n",
+    "rbf_cv_mean = svm_rbf_gs.best_score_\n",
+    "rbf_cv_std  = svm_rbf_gs.cv_results_[\"std_test_score\"][svm_rbf_gs.best_index_]\n",
+    "rbf_val_acc = accuracy_score(y_val, svm_rbf_gs.predict(X_val))\n",
+    "\n",
+    "print(\"\\n=== SVM (RBF) ===\")\n",
+    "print(\"Best params:\", svm_rbf_gs.best_params_)\n",
+    "print(f\"CV accuracy (mean ± std): {rbf_cv_mean:.4f} ± {rbf_cv_std:.4f}\")\n",
+    "print(f\"Validation accuracy:       {rbf_val_acc:.4f}\")\n",
+    "\n"
    ]
   }
  ],
