Added page numbers and my name

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "274a34b7",
+   "metadata": {},
+   "source": [
+    "## Oblig2 - Lars Christer Molteberg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "05385368",
